--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ permalink: /
 </div>
 
 <footer><div class="container"><div class="row">
-    <div class="col text-center">Built on the <a href="https://github.com/tsjensen/fuse-core">Fuse Core</a>
+    <div class="col text-center"><a href="http://marzorati.co">marzorati.co</a> is powered by the &#10084;
     Jekyll theme.</div>
 </div></div></footer>
 
