--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@ permalink: /
 </div>
 
 <footer><div class="container"><div class="row">
-    <div class="col text-center"><a href="http://marzorati.co">marzorati.co</a> is powered by the &#10084;
-    Jekyll theme.</div>
+    <div class="col text-center"><a href="http://marzorati.co">marzorati.co</a> is powered by the &#10084;</div>
 </div></div></footer>
 
 </body>
