--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@ permalink: /
 </head>
 <body class="fullscreen-background">
 
-<div class="glass-pane">
-<div class="container fuse-core-content pb-4">
+<!--  <div class="glass-pane"> -->
+	<div class="container fuse-core-content pb-4">
 
-<div class="row pt-sm-4">
-    <div class="col text-center"><img id="avatar" class="my-3 my-sm-4" alt="{{ site.name }}"
+	<div class="row pt-sm-4">
+		<div class="col text-center"><img id="avatar" class="my-3 my-sm-4" alt="{{ site.name }}"
         src="{% if site.avatar %}{% if site.avatar contains '://' %}{{ site.avatar }}{%
         else %}{{ site.baseurl }}/{{ site.avatar }}{% endif %}{%
         else %}{{ site.baseurl }}/images/avatar.svg{% endif %}"></div>
-</div>
-<div class="row">
+	</div>
+	<div class="row">
     <div class="col">
         <h1 class="text-center font-weight-bold">{{ site.name }}</h1>
         {% if site.subtitle %}<h3 class="text-center font-weight-light">{{ site.subtitle }}</h3>{% endif %}
@@ -97,7 +97,7 @@ permalink: /
 {% endif %}
 
 </div>
-</div>
+<!--  </div> -->
 
 <footer><div class="container"><div class="row">
     <div class="col text-center"><a href="http://marzorati.co">marzorati.co</a> is powered by the &#10084;</div>
