--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@ permalink: /
     {% include analytics.html %}
 
     <!-- favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/images/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/images/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/images/favicons/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/images/favicons/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/images/favicons/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/images/favicons/favicon.png">
     <link rel="manifest" href="{{ site.baseurl }}/images/favicons/site.webmanifest">
     <link rel="mask-icon" href="{{ site.baseurl }}/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="{{ site.baseurl }}/images/favicons/favicon.ico">
+    <link rel="shortcut icon" href="{{ site.baseurl }}/images/favicons/favicon.png">
     <meta name="msapplication-TileColor" content="#00a300">
     <meta name="msapplication-config" content="{{ site.baseurl }}/images/favicons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
